# py-tello-monitor

./: README.md  pyproject.toml
src/: monitor.py
tellomonitor/: monitor.py
